hellofresh.py: combine <h1> and <h4> to get full recipe name
test_hellofresh.html: change <h4> text

test_scraper_hellofresh.py: change test to include <h4> in name

--- a/tests/test_hellofresh.html
+++ b/tests/test_hellofresh.html
@@ -63,7 +63,7 @@
                Recipy
               </h1>
               <h4>
-               recipe additional text
+               with additional awesomeness
               </h4>
               <div>
               </div>
