add source_url to hellofresh, paprika schema, and tests

--- a/tests/test_hellofresh.html
+++ b/tests/test_hellofresh.html
@@ -4,6 +4,7 @@
   <title>
    Recipy Recipe | HelloFresh
   </title>
+  <link data-react-helmet="true" rel="canonical" href="https://www.hellofresh.com/recipes/recipy-with-extra-awesome">
  </head>
  <body>
   <div id="recipe-detail-fragment.ommitted">
