--- a/tests/test_hellofresh.html
+++ b/tests/test_hellofresh.html
@@ -176,7 +176,7 @@
                   </span>
                   <span>
                    <span data-translation-id="recipe-detail.level-number-2">
-                    Uber hard
+                    Über hard
                    </span>
                   </span>
                  </div>
