use path to sample.jpeg as src in test html img tag
change MockResponse to check against the arguments passed to requests.get to allow for different responses on different calls. raises an exception when a resource is asked for that isn't programmed for.

--- a/tests/test_hellofresh.html
+++ b/tests/test_hellofresh.html
@@ -53,7 +53,7 @@
           </div>
          </div>
          <div>
-          <img alt="Recipy" sizes="100vw" src="https://github.githubassets.com/favicons/favicon.png" srcset=""/>
+          <img alt="Recipy" sizes="100vw" src="tests/sample.jpeg" srcset=""/>
          </div>
          <div>
           <div>
